--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ _site/
 # counterproductive to check this file into the repository.
 # Details at https://github.com/github/pages-gem/issues/768
 Gemfile.lock
+
+/_build/
