Add all workshop 1 content

--- a/myst.yml
+++ b/myst.yml
@@ -13,6 +13,7 @@ project:
     - file: workshops.md
       children:
         - pattern: 'workshop_notebooks/*.ipynb'
+        - pattern: 'workshop_notebooks/*.md'
     
 site:
   template: book-theme
