--- a/myst.yml
+++ b/myst.yml
@@ -12,8 +12,7 @@ project:
     - file: index.md
     - file: workshops.md
       children:
-        - pattern: 'workshop_notebooks/*.ipynb'
-        - pattern: 'workshop_notebooks/*.md'
+        - pattern: 'workshop_notebooks/*_*.*'
     
 site:
   template: book-theme
